revised media queries

--- a/article.css
+++ b/article.css
@@ -27,7 +27,7 @@ p {
     color: #555;
 }
 
-/* Variation 1: Centered Image */
+/* Variations */
 .centered-image-article img {
     width: 100%;
     max-height: 45vh;
@@ -47,7 +47,16 @@ p {
 /* Media Queries ------------------ */
 
 /* Tablet Vertical */
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 900px) {
+    article {
+        width: 95%;
+        margin: 30px auto;
+    }
+
+    .text-content {
+        width: 90%;
+    }
+
     h1 {
         font-size: 2.2rem;
     }
@@ -56,75 +65,36 @@ p {
         font-size: 1.1rem;
     }
 
-    /* Variation 1: Centered Image */
-    .centered-image-article img {
-        max-height: 40vh;
-    }
-
-    /* Variation 2: Left-Aligned Image with Text Wrapping */
-    .left-image-article img {
-        width: 50%; 
-        height: auto;
-        max-height: 50vh;
-    }
-
-    /* Variation 3: Right-Aligned Image with Text Wrapping */
-    .right-image-article img {
-        width: 50%;
-        height: auto;
-        max-height: 50vh;
-    }
-}
-
-/* Smartphone Vertical */
-@media screen and (max-width: 767px) {
-    article {
-        width: 95%;
-        margin: 30px auto;
-    }
-
-    .text-content {
-        width: 85%;
-    }
-
-    h1 {
-        font-size: 1.8rem;
-        margin: 15px 0;
-    }
-
-    p {
-        font-size: 1rem;
-    }
-
-    /* Variation 1: Centered Image */
+    /* Variations */
     .centered-image-article img {
         max-height: 35vh;
         margin-bottom: 20px;
     }
 
-    /* Variation 2: Left-Aligned Image with Text Wrapping */
-    .left-image-article {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .left-image-article img {
+    .left-image-article img, .right-image-article img {
         width: 100%; 
         height: auto;
         max-height: 40vh;
         margin: 0 0 20px 0;
     }
 
-    /* Variation 3: Right-Aligned Image with Text Wrapping */
-    .right-image-article {
-        flex-direction: column-reverse;
+    .left-image-article, .right-image-article {
+        flex-direction: column;
         align-items: center;
     }
+}
 
-    .right-image-article img {
-        width: 100%;
-        height: auto;
-        max-height: 40vh;
-        margin: 0 0 20px 0;
+/* Smartphone Vertical */
+@media screen and (max-width: 600px) {
+    .text-content {
+        width: 95%;
+    }
+
+    h1 {
+        font-size: 1.8rem;
+    }
+
+    p {
+        font-size: 1rem;
     }
 }
