--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ footer {
   color: rgb(51, 51, 51);
   padding: 20px 0;
   display: flex;
-  flex-direction: column; /* Stack items vertically */
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 1.2rem;
@@ -136,7 +136,11 @@ footer {
 /* Media Queries ------------------ */
 
 /* Tablet Vertical */
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 900px) {
+  .nav-left h1 {
+    font-size: 1.5rem !important;
+  }
+
   .main {
     width: 90%;
   }
@@ -149,42 +153,17 @@ footer {
     font-size: 1.7rem;
   }
 
-  .nav-left h1 {
-    font-size: 2.8rem;
-  }
-
-  #navbar.scrolled .nav-left h1 {
-    font-size: 2.3rem; 
-  }
-}
-
-/* Smartphone Vertical */
-@media screen and (max-width: 767px) {
-  .main {
-    width: 95%;
-    margin: 30px auto;
-  }
-
-  .featured-article h1 {
-    font-size: 2rem;
-  }
-
-  .featured-article p {
-    font-size: 1rem;
-  }
-
   .smaller-articles {
     flex-direction: column;
   }
 
   .article {
-    margin: 20px 0;
+    margin-bottom: 20px;
   }
+}
 
-  .article h2 {
-    font-size: 1.5rem;
-  }
-
+/* Smartphone Vertical */
+@media screen and (max-width: 600px) {
   nav {
     flex-direction: column;
     align-items: flex-start;
@@ -192,15 +171,24 @@ footer {
     padding: 10px 5%;
   }
 
-  .nav-left h1 {
-    font-size: 2.5rem;
+  .nav-right a {
+    margin-left: unset;
+    margin-right: 20px;
   }
 
-  #navbar.scrolled .nav-left h1 {
-    font-size: 2rem; /* Slightly reduce size when scrolled */
+  .featured-article h1 {
+    font-size: 1.5rem;
   }
 
-  .nav-right {
-    margin-top: 10px;
+  .featured-article p {
+    font-size: 1rem;
+  }
+
+  .article {
+    margin: 10px 0;
+  }
+
+  .article h2 {
+    font-size: 1.3rem;
   }
 }
