--- a/article.css
+++ b/article.css
@@ -47,7 +47,7 @@ p {
 /* Media Queries ------------------ */
 
 /* Tablet Vertical */
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1025px) {
     article {
         width: 95%;
         margin: 30px auto;
@@ -71,23 +71,24 @@ p {
         margin-bottom: 20px;
     }
 
-    .left-image-article img, .right-image-article img {
-        width: 100%; 
-        height: auto;
-        max-height: 40vh;
-        margin: 0 0 20px 0;
-    }
-
     .left-image-article, .right-image-article {
         flex-direction: column;
         align-items: center;
     }
+
+    .left-image-article img, .right-image-article img {
+        width: 100%; 
+        height: auto;
+        max-height: 35vh;
+        margin-bottom: 20px;
+    }
+
 }
 
 /* Smartphone Vertical */
 @media screen and (max-width: 600px) {
-    .text-content {
-        width: 95%;
+    article, .text-content {
+        width: 100%;
     }
 
     h1 {
