--- a/style.css
+++ b/style.css
@@ -50,13 +50,13 @@ nav {
 
 .nav-right a {
   margin-left: 20px;
-  color: rgb(51, 51, 51);
+  color: hsl(0, 0%, 20%);
   text-decoration: none;
 }
 
-.nav-right a:hover {
-  text-decoration: underline;
-}
+  .nav-right a:hover {
+    color: hsl(0, 0%, 40%);
+  }
 
 /* Featured Article Styles */
 .featured-article {
